# beefy-databarn

./: .dockerignore  .env-grafana.example  .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  Makefile  README.md  beefy-databarn.code-workspace  logging.yaml  meltano.yml  pyproject.toml
api/: __init__.py  main.py  pyproject.toml
api/lib/: __init__.py  app.py  cache.py  config.py  db.py  exceptions.py  middleware.py  sqla_to_pyd.py
api/routes/: __init__.py  health.py  products.py  revenue_summary.py
dbt/: .gitignore  dbt_project.yml  package-lock.yml  profiles.yml  pyproject.toml
dbt/macros/: .gitkeep  clickhouse_conversions.sql  test_row_count_drop_threshold.sql
dbt/macros/tests/: expect_array_length_to_be_between.sql  expect_column_max_value.sql  expect_column_values_to_match_regex_clickhouse.sql  expect_date_exists.sql  expect_exactly_one_row.sql  is_0x_string.sql  is_bytes_string.sql  relationships_array.sql  relationships_array_multi_key.sql  relationships_multi_key.sql
dbt/models/api/: api_revenue_summary.sql  api_revenue_summary.yml
dbt/models/data_quality/: missing_products_in_envio.sql  missing_products_in_envio.yml
dbt/models/dimensions/: account.sql  account.yml  chain.sql  chain.yml  platform.sql  product.sql  product.yml  product_bundle.sql  product_bundle.yml  product_classic.sql  product_classic.yml  product_classic_boost.sql  product_classic_boost.yml  product_clm.sql  product_clm.yml  product_reward_pool.sql  product_reward_pool.yml  token.sql
dbt/models/marts/: chain_stats.sql  chain_stats.yml  daily_revenue_summary.sql  daily_revenue_summary.yml  investor_timeline.sql  investor_timeline.yml  product_stats.sql  product_stats.yml  product_stats_latest.sql  product_stats_latest.yml  revenue_buyback_events.sql  revenue_buyback_events.yml  yield_harvest_events.sql
dbt/models/marts/dimensions/: chain.sql  chain.yml  dim_chain.sql  platform.yml  product.sql  product.yml  product_classic.sql  product_classic.yml  product_clm.sql  product_clm.yml  product_reward_pool.sql  product_reward_pool.yml  product_reward_pool_reward_token.sql  product_reward_pool_reward_token.yml  product_reward_pool_token_erc20.sql  product_reward_pool_token_erc20.yml  schema.yml  token.yml  token_erc20.sql  token_erc20.yml
dbt/models/marts/revenue/: revenue_buyback_events.sql  revenue_buyback_events.yml  revenue_summary.sql  revenue_trends.sql  schema.yml
dbt/models/marts/tvl/: product_stats.sql  product_stats.yml
dbt/models/marts/yield/: schema.yml  yield_harvest_events.sql  yield_harvest_events.yml
dbt/models/staging/beefy_db/: schema.yml  stg_beefy_db__address_metadata.sql  stg_beefy_db__bifi_buyback.sql  stg_beefy_db__chains.sql  stg_beefy_db__harvests.sql  stg_beefy_db__harvests.yml  stg_beefy_db__price_oracles.sql  stg_beefy_db__prices.sql  stg_beefy_db__prices.yml  stg_beefy_db__vault_ids.sql
dbt/models/staging/dlt/: sources.yml
dbt/models/staging/envio/: sources.yml  stg_envio__account.sql  stg_envio__account.yml  stg_envio__classic_boost.sql  stg_envio__classic_boost.yml  stg_envio__classic_vault.sql  stg_envio__classic_vault.yml  stg_envio__classic_vault_strategy.sql  stg_envio__classic_vault_strategy.yml  stg_envio__clm_manager.sql  stg_envio__clm_manager.yml  stg_envio__clm_strategy.sql  stg_envio__clm_strategy.yml  stg_envio__dynamic_contract_registry.sql  stg_envio__dynamic_contract_registry.yml  stg_envio__erc4626_adapter.sql  stg_envio__erc4626_adapter.yml  stg_envio__lst_vault.sql  stg_envio__lst_vault.yml  stg_envio__pool_rewarded_event.sql  stg_envio__pool_rewarded_event.yml  stg_envio__reward_pool.sql  stg_envio__reward_pool.yml  stg_envio__token.sql  stg_envio__token.yml  stg_envio__token_balance.sql  stg_envio__token_balance.yml  stg_envio__token_balance_change.sql  stg_envio__token_balance_change.yml
dbt/seeds/: .gitkeep
dlt/: README.md  all_pipeline.py  beefy_api_pipeline.py  beefy_db_pipeline.py  github_files_pipeline.py  pyproject.toml  run.py
dlt/.dlt/: config.toml
dlt/.migrations/: reorder_apy_pk.sql
dlt/lib/: async_runner.py  cli.py  clickhouse.py  config.py  convert.py  fetch.py
dlt/migrations/: force_harvests_table_schema.sql  force_prices_table_schema.sql
dlt/sources/: beefy_api.py  beefy_api_configs.py  beefy_api_snapshots.py  beefy_config_api.py  beefy_db.py  beefy_stats_api.py  github_files.py
dlt/sources/beefy_db/: beefy_db.py
dlt/sources/beefy_db/incremental/: harvests.py  prices.py
dlt/sources/resources/beefy_api/: configs.py  snapshots.py
dlt/sources/resources/beefy_db/: apys.py  harvests.py  prices.py  tables.py  tvl_by_chain.py  tvls.py
dlt/sources/resources/github_files/: ui_repo.py
extract/tap-beefy-databarn/: .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
extract/tap-beefy-databarn/tap_beefy_databarn/: README.md  __init__.py  tap.py
extract/tap-beefy-databarn/tap_beefy_databarn/common/: chains.py  events.py  explorer_config.py  pydantic_dataclass_stream.py  rate_limit.py
extract/tap-beefy-databarn/tests/: __init__.py  test_core.py
hasura/: README.md
(+216 files in other folders)
