[project]
name = "beefy-databarn"
version = "0.1.0"
description = "Beefy Databarn - Full stack data platform"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dbt-clickhouse>=1.9.6",
    "dbt-core>=1.10.13",
    "dlt>=1.18.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

# This is a data project, not a Python package - disable building
[tool.uv]
package = false
# requires-uv = ">=0.9.8"
