[project]
name = "beefy-databarn"
version = "0.1.0"
description = "Beefy Databarn - Full stack data platform"
requires-python = ">=3.12,<3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "dbt-clickhouse>=1.9.6",
    "dbt-core>=1.10.13",
    "dlt==1.18.2",
    "dlt[clickhouse]>=1.18.2",
    "dlt[filesystem]>=1.18.2",
    "httpx>=0.27.0",
    "dlt[sql_database]>=1.18.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "psycopg2-binary>=2.9.11",
    "clickhouse-connect>=0.9.2",
    "dotenv>=0.9.9",
    "psutils>=3.3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "py-spy>=0.4.1", # profiling
]

# This is a data project, not a Python package - disable building
[tool.uv]
package = false

[dependency-groups]
dev = []
