# This is a monorepo - each application has its own pyproject.toml:
# - dlt/pyproject.toml
# - dbt/pyproject.toml
# - api/pyproject.toml
#
# This root file is kept for compatibility but should not contain app-specific dependencies.

[project]
name = "beefy-databarn"
version = "0.1.0"
description = "Beefy Databarn - Full stack data platform (monorepo)"
requires-python = ">=3.12,<3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "py-spy>=0.4.1", # profiling
]

# This is a data project, not a Python package - disable building
[tool.uv]
package = false

[dependency-groups]
dev = []
