[project]
name = "beefy-databarn-dbt"
version = "0.1.0"
description = "Beefy Databarn - DBT data transformation"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dbt-clickhouse>=1.9.6",
    "dbt-core>=1.10.15",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

# This is a data project, not a Python package - disable building
[tool.uv]
package = false

[dependency-groups]
dev = []

