[tool.poetry]
name = "tap-beefy-databarn"
version = "0.0.1"
description = "`tap-beefy-databarn` is a Singer tap for BeefyDatabarn, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Clément Prévost <998369+prevostc@users.noreply.github.com>"]
keywords = [
    "ELT",
    "BeefyDatabarn",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4"
singer-sdk = { version="~=0.34.1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
psycopg = "^3.1.16"
requests = "^2.30.0"
types-python-dateutil = "2.8.19.14"
pydantic = "^2.5.3"
portion = "^2.4.2"
jsonref = "^1.1.0"
eth-pydantic-types = "^0.1.0a5"
web3 = "^6.14.0"
requests-ratelimiter = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.34.1", extras = ["testing"] }
mypy = "1.8.0"
types-requests = "2.30.0.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-block-explorer-contract-creation-infos = 'tap_beefy_databarn.tap:TapBlockExplorerContractCreationInfos.cli'
tap-squid-contract-events = 'tap_beefy_databarn.tap:TapSquidContractEvents.cli'
